netclientclock: Fix GError memory leak in handling NTP response

Error was not released if gst_ntp_packet_receive failed.

https://bugzilla.gnome.org/show_bug.cgi?id=760598